--- a/src/styles.css
+++ b/src/styles.css
@@ -404,7 +404,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 320px;
+  min-height: 10em;
   color: #475569;
 }
 
